# reStations

./: .dockerignore  .env  .env.test  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile-heroku  README.md  db.sql  docker-compose.yml  heroku.yml  reset_db.sql
.cargo/: config.toml
.github/actions/smoke-test/: action.yml
.github/workflows/: general.yml  update-docker-image.yml
cli/: Cargo.toml  README.md
cli/blueprints/entity/: file.rs
cli/blueprints/entity-test-helper/: file.rs
cli/src/: error.rs  lib.rs  main.rs  sync.rs
config/: Cargo.toml  README.md  app.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: data.rs
db/: Cargo.toml  README.md  schema.sql
db/migrations/: 1743416114__create-stations.sql
db/src/: lib.rs
db/src/entities/: stations.rs
db/src/test_helpers/: mod.rs  stations.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
scripts/: format  lint  start.sh  sync-data
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml  README.md
web/src/: db.rs  db.sql  error.rs  lib.rs  main.rs  osdm.rs  routes.rs  state.rs
web/src/controllers/: mod.rs  osdm.rs  places.rs  stations.rs
web/src/db/: error.rs  finders.rs  lib.rs  mod.rs  pool.rs  station_record.rs
web/src/test_helpers/: mod.rs
web/src/types/: mod.rs  osdm.rs  station_record.rs
web/tests/api/: greeting_test.rs  main.rs  places_test.rs  stations_test.rs
workflows/: ci.yml
