[workspace]
resolver = "2"
members = ["cli", "core", "server"]

[workspace.dependencies]
anyhow = { version = "1.0.93", default-features = false }
axum = { version = "0.7.9", default-features = false }
clap = { version = "4.5.20", default-features = false }
csv-async = { version = "1.3.0", default-features = false }
rusqlite = { version = "0.32.1", default-features = false }
serde = { version = "1.0.214", default-features = false }
stations-core = { path = "core", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
tokio = { version = "1.41.1", default-features = false }
reqwest = { version = "0.12.9", default-features = false }
