[package]
name = "stations-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "std", "help", "error-context", "color", "suggestions", "usage"] }
csv-async = { workspace = true, features = ["with_serde", "tokio"] }
reqwest = { workspace = true, features = ["json", "charset", "default-tls", "http2", "macos-system-configuration", "stream"] }
rusqlite = { workspace = true, features = ["bundled"] }
stations-core = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
