[package]
name = "restations-cli"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without additional setup
doctest = false

[[bin]]
name = "db"
path = "src/bin/db.rs"
[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
cruet = "0.14"
csv-async = { version = "1.3", features = ["tokio"] }
futures = "0.3"
guppy = "0.17"
include_dir = "0.7"
liquid = "~0.26"
restations-config = { path = "../config" }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
] }
tempfile = "3.19"
url = "2.5"
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"

[dev-dependencies]
insta = "1.38"
