[package]
name = "restations-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = [
    "dep:serde_json",
    "dep:tower",
    "dep:hyper",
    "dep:restations-macros",
]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-streams = { version = "0.19", features = ["json"] }
restations-config = { path = "../config" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tokio-stream = { version = "0.1.16" }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "fmt",
    "time",
] }

serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }

restations-macros = { path = "../macros", optional = true }
rusqlite = { version = "0.33.0", features = ["bundled"] }
r2d2_sqlite = { version = "0.26.0" }
r2d2 = { version = "0.8.10" }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
] }
serde_rusqlite = { version = "0.37.0" }

[dev-dependencies]
fake = "3.0"
googletest = "0.13"

restations-web = { path = ".", features = ["test-helpers"] }
