[package]
name = "restations-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = [
    "dep:serde_json",
    "dep:tower",
    "dep:hyper",
    "dep:restations-macros",
]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
restations-config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "fmt",
    "time",
] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
restations-macros = { path = "../macros", optional = true }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
csv-async = { version = "1.3.0", features = ["tokio"] }

[dev-dependencies]
fake = "3.0"
googletest = "0.13"
restations-web = { path = ".", features = ["test-helpers"] }
