[package]
name = "restations-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = [
    "dep:serde_json",
    "dep:tower",
    "dep:hyper",
    "dep:restations-macros",
]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
restations-config = { path = "../config" }
restations-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "fmt",
    "time",
] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
restations-macros = { path = "../macros", optional = true }
validator = "0.20"

[dev-dependencies]
fake = "4.0"
googletest = "0.13"
restations-db = { path = "../db", features = ["test-helpers"] }
restations-web = { path = ".", features = ["test-helpers"] }
